set(PARSER_LIB_NAME "parser")
set(PARSER_MODULE_PATH "${PROJECT_SOURCE_DIR}/src/parser")
set(PARSER_INCLUDE_PATH  "${PARSER_MODULE_PATH}")
set(PARSER_SRC_PATH "${PARSER_MODULE_PATH}" )

#set sources
file(GLOB HEADER_FILES ${PARSER_INCLUDE_PATH}/*.h)
file(GLOB SOURCE_FILES ${PARSER_SRC_PATH}/*.cpp)

include_directories(${UTILS_INCLUDE_PATH})
add_library(${PARSER_LIB_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES} )
target_link_libraries(${PARSER_LIB_NAME} ${UTILS_LIB_NAME})

#export vars
set(PARSER_INCLUDE_PATH  ${PARSER_INCLUDE_PATH} PARENT_SCOPE)
set(PARSER_LIB_NAME ${PARSER_LIB_NAME} PARENT_SCOPE)


