set(UTILS_LIB_NAME "utils")
set(UTILS_MODULE_PATH "${PROJECT_SOURCE_DIR}/src/utils")
set(UTILS_INCLUDE_PATH  "${UTILS_MODULE_PATH}")
set(UTILS_SRC_PATH "${UTILS_MODULE_PATH}" )

#set sources
file(GLOB HEADER_FILES ${UTILS_INCLUDE_PATH}/*.h)
file(GLOB SOURCE_FILES ${UTILS_SRC_PATH}/*.cpp)

add_library(${UTILS_LIB_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})

#export vars
set(UTILS_INCLUDE_PATH  ${UTILS_INCLUDE_PATH} PARENT_SCOPE)
set(UTILS_LIB_NAME ${UTILS_LIB_NAME} PARENT_SCOPE)


